[metadata]
name = pyDCX
license = MIT
version = attr: DCX2496.VERSION
author = Ferdinand Thiessen
description = Interface for the Behringer DCX2496
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = DCX2496
install_requires =
        pySerial >= 3.5

[options.entry_points]
console_scripts =
    dcx-daemon = DCX2496.daemon:run_daemon
